log
Fri 24 Mar 2023 11:36:16 AM UTC: 
 tests:  0|6
total_score: 0/70
7d565db
Fri 24 Mar 2023 11:36:37 AM UTC: 
 list.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:16: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   List* lista=(list*) malloc(sizeof(list));
      |                ^~~~
      |                List
list.c:33:16: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:21: error: expected expression before ‘)’ token
   33 |   List* lista=(list*) malloc(sizeof(list));
      |                     ^
list.c: In function ‘firstList’:
list.c:42:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   42 |   if(!lista->head) return NULL;
      |       ^~~~~
      |       list
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f57fbc6
Fri 24 Mar 2023 11:36:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:37: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   List* lista=(List*) malloc(sizeof(list));
      |                                     ^~~~
      |                                     List
list.c:33:37: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘firstList’:
list.c:42:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   42 |   if(!lista->head) return NULL;
      |       ^~~~~
      |       list
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8cdac34
Fri 24 Mar 2023 11:37:00 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:7: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   42 |   if(!lista->head) return NULL;
      |       ^~~~~
      |       list
list.c:42:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7d0fda1
Fri 24 Mar 2023 11:37:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:7: error: ‘Lista’ undeclared (first use in this function); did you mean ‘List’?
   42 |   if(!Lista->head) return NULL;
      |       ^~~~~
      |       List
list.c:42:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:43:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   43 |   lista->current=lista->head;
      |   ^~~~~
      |   list
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
13c8041
Fri 24 Mar 2023 11:37:33 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:15: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   44 |   return (list->first->data);
      |               ^~
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fa0b7c1
Fri 24 Mar 2023 11:37:44 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3d6fedb
Fri 24 Mar 2023 11:44:57 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7953a10
Fri 24 Mar 2023 11:45:17 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
92c1019
Fri 24 Mar 2023 11:45:51 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
9db8f1b
Fri 24 Mar 2023 11:52:08 AM UTC: 
 list.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:3: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   49 |   current->next;
      |   ^~~~~~~
      |   popCurrent
list.c:49:3: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘pushBack’:
list.c:75:9: error: unused variable ‘n’ [-Werror=unused-variable]
   75 |   Node* n = createNode(data);
      |         ^
list.c: In function ‘popFront’:
list.c:86:9: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   86 |   while(current->next)
      |         ^~~~~~~
      |         popCurrent
list.c:88:30: error: expected ‘;’ before ‘}’ token
   88 |       current = current->next
      |                              ^
      |                              ;
   89 |     }
      |     ~                         
cc1: all warnings being treated as errors
Compilation failed
21c3e34
Fri 24 Mar 2023 11:52:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:16: error: statement with no effect [-Werror=unused-value]
   49 |   list->current->next;
      |   ~~~~~~~~~~~~~^~~~~~
list.c: In function ‘pushBack’:
list.c:75:9: error: unused variable ‘n’ [-Werror=unused-variable]
   75 |   Node* n = createNode(data);
      |         ^
list.c: In function ‘popFront’:
list.c:86:9: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   86 |   while(current->next)
      |         ^~~~~~~
      |         popCurrent
list.c:86:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:88:30: error: expected ‘;’ before ‘}’ token
   88 |       current = current->next
      |                              ^
      |                              ;
   89 |     }
      |     ~                         
cc1: all warnings being treated as errors
Compilation failed
8b3d2f9
